5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1575_1326.log
== TEST (2019-03-12 11:31:52) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:31:56) 
-- CODE:
print(22)
-- EXECUTION TIME:
0.197453
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:02) 
-- CODE:
print("22") 
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:05) 
-- CODE:
print("22") 
-- EXECUTION TIME:
0.153201
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:16) 
-- CODE:
print(22) 
-- EXECUTION TIME:
0.17467
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:43) 
-- CODE:
print(5) 
-- EXECUTION TIME:
0.17593
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:33:46) 
-- CODE:
print(5) 
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:49) 
-- CODE:
print(5) 
-- EXECUTION TIME:
0.2031
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:33:56) 
-- CODE:
print(12) 
-- EXECUTION TIME:
0.143695
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:34:25) 
-- CODE:
print 22
-- EXECUTION TIME:
0.144829
-- ERROR:
  File "/home/codebench/codes/1575/1326/main.py", line 1
    print 22
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:34:38) 
-- CODE:
print (22)
-- EXECUTION TIME:
0.144043
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:35:19) 
-- CODE:
print(33)
-- EXECUTION TIME:
0.15579
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:15) 
-- CODE:
print(5)
-- EXECUTION TIME:
0.138124
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:36:17) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:19) 
-- CODE:
print(5)
-- EXECUTION TIME:
0.138955
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:36:34) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:36:36) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.119031
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
